# hs-polar

./: .gitignore  .travis.yml  Main.hs  Makefile  README.md  main.shader  polar-engine.cabal  polar.cabal  polar4.cabal  shader.fsh  shader.gls  stack-ghc-7.10.yaml  stack-ghc8.yaml  stack.yaml
assets/: shader.fsh  shader.vsh
examples/basic/: Main.hs
examples/pong/: Main.hs
lib/polar/src/Data/Function/: Apply.hs
lib/polar/src/Polar/: Logger.hs  Types.hs
lib/polar/src/Polar/Shader/: Parser.hs  Processor.hs  Tokenizer.hs
lib/polar/src/Polar/Types/: Box.hs  Engine.hs  Key.hs
src/: Main.hs  Polar.hs  Test.hs
src/Control/Monad/: Truthful.hs
src/Data/: Truthful.hs
src/Polar/: Control.hs  Engine.hs  Exit.hs  Hoist.hs  Input.hs  Listener.hs  Log.hs  Log.hs-boot  Logger.hs  Run.hs  Shader.hs  Storage.hs  Store.hs  Test.hs  Types.hs  Unique.hs
src/Polar/Asset/: Manager.hs
src/Polar/Asset/Shader/: Parser.hs  Processor.hs  Tokenizer.hs  Types.hs
src/Polar/Assets/: Manager.hs
src/Polar/Core/: Config.hs  File.hs  Log.hs  Log.hs-boot  Run.hs
src/Polar/LL/: Run.hs
src/Polar/Logic/: Run.hs
src/Polar/Renderer/: OpenGL_3_2.hs
src/Polar/Renderer/OpenGL_3_2/: Shader.hs
src/Polar/Shader/: Parser.hs  Processor.hs  Tokenizer.hs  Types.hs
src/Polar/Shader/Compiler/: GLSL150.hs
src/Polar/Sys/: Run.hs
src/Polar/System/: Renderer.hs
src/Polar/System/Renderer/: OpenGL_3_2.hs
src/Polar/Test/: Asset.hs
src/Polar/Test/Asset/: Shader.hs
src/Polar/Test/Asset/Shader/: Tokenizer.hs
src/Polar/Types/: AssetManager.hs  Box.hs  Callback.hs  Color.hs  Config.hs  Core.hs  Core.hs-boot  Engine.hs  Event.hs  Input.hs  Key.hs  LL.hs  Lenses.hs  Log.hs  Logic.hs  Options.hs  Point.hs  Point2.hs  Primitive.hs  Rectangle.hs  Storage.hs  Sys.hs
test/Polar/Asset/Shader/: ParserSpec.hs  TokenizerSpec.hs
test/Polar/Shader/: ParserSpec.hs  TokenizerSpec.hs
