name:                polar-engine
version:             0.1.0.0
synopsis:            Polar Game Engine
description:         Polar Game Engine
license:             Apache-2.0
license-file:        LICENSE
author:              David Farrell
maintainer:          David Farrell <shokku.ra@gmail.com>
copyright:           Copyright (C) 2014-2016 David Farrell
category:            Game Engine
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/polar-engine/polar.git

library
  exposed-modules:     Polar,
                       Polar.Run,
                       Polar.Log,
                       Polar.Exit,
                       Polar.Storage,
                       Polar.Core.Config,
                       Polar.Core.File,
                       Polar.Core.Run,
                       Polar.Sys.Run,
                       Polar.Logic.Run,
                       Polar.System.Renderer.OpenGL_3_2,
                       Polar.Shader.Compiler.GLSL150,
                       Polar.Types,
                       Polar.Types.Core,
                       Polar.Types.Sys,
                       Polar.Types.Logic,
                       Polar.Types.Engine,
                       Polar.Types.Config,
                       Polar.Types.Log,
                       Polar.Types.Storage,
                       Polar.Types.Lenses
  build-depends:       base >=4.8 && <5.0, containers >=0.5.5, transformers >=0.4, mtl >=2.2, bytestring >=0.10, lens >=4.12,
                       hint >=0.4, unordered-containers >=0.2, vector >=0.11, hashable >=1.2,
                       OpenGL >=2.12, OpenGLRaw >2.1, GLFW-b >=1.4.7,
                       tight-apply >=0.1 && <0.2, truthful >=0.1 && <0.2,
                       polar-shader >=0.1 && <0.2, polar-configfile >=0.5
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -W
  ghc-prof-options:    -fprof-auto-calls

test-suite example-basic
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >=4.8 && <5.0, polar-engine
  default-language:    Haskell2010
  hs-source-dirs:      examples/basic
  ghc-options:         -W
  ghc-prof-options:    -fprof-auto-calls
