name:                polar-engine
version:             0.1.0.0
synopsis:            Polar Game Engine
description:         Polar Game Engine
license:             Apache-2.0
license-file:        LICENSE
author:              David Farrell
maintainer:          David Farrell <shokku.ra@gmail.com>
copyright:           Copyright (C) 2014-2016 David Farrell
category:            Game Engine
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/polar-engine/polar.git

library
  exposed-modules:     Polar,
                       Polar.Run,
                       Polar.Log,
                       Polar.Exit,
                       Polar.Storage,
                       Polar.Unique,
                       Polar.Core.Config,
                       Polar.Core.File,
                       Polar.Core.Run,
                       Polar.Sys.Run,
                       Polar.Logic.Run,
                       Polar.System.Renderer,
                       Polar.System.Renderer.OpenGL_3_2,
                       Polar.Shader.Compiler.GLSL150,
                       Polar.Types,
                       Polar.Types.Core,
                       Polar.Types.Sys,
                       Polar.Types.Logic,
                       Polar.Types.Engine,
                       Polar.Types.Config,
                       Polar.Types.Log,
                       Polar.Types.Storage,
                       Polar.Types.Primitive,
                       Polar.Types.Lenses
  build-depends:       base                 >= 4.9   && < 4.10,
                       containers           >= 0.5.5 && < 0.6,
                       transformers         >= 0.5   && < 0.6,
                       mtl                  >= 2.2   && < 2.3,
                       bytestring           >= 0.10  && < 0.11,
                       lens                 >= 4.14  && < 4.15,
                       hint                 >= 0.6   && < 0.7,
                       unordered-containers >= 0.2   && < 0.3,
                       vector               >= 0.11  && < 0.12,
                       hashable             >= 1.2   && < 1.3,
                       stm                  >= 2.4   && < 2.5,
                       OpenGL               >= 3.0   && < 3.1,
                       OpenGLRaw            >= 3.2   && < 3.3,
                       GLFW-b               >= 1.4.7 && < 1.5,
                       polar-shader         >= 0.3   && < 0.4,
                       polar-configfile     >= 0.5   && < 0.6
  default-language:    Haskell2010
  hs-source-dirs:      src

test-suite example-basic
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.10,
                       mtl  >= 2.2 && < 2.3,
                       polar-engine
  default-language:    Haskell2010
  hs-source-dirs:      examples/basic
