name:                polar
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              David Farrell
maintainer:          shokku.ra@gmail.com
copyright:           (c) 2014-2015 David Farrell
-- category:            
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:     Polar,
                       Polar.Shader.Types,
                       Polar.Shader.Tokenizer,
                       Polar.Shader.Parser,
                       Polar.Shader.Processor
  build-depends:       base >=4.7, mtl >=2.2, containers >=0.5.5, OpenGL >=2.12, OpenGLRaw >2.1, GLFW-b >=1.4.7, transformers >=0.4.2, bytestring >=0.10, lens >=4.12
  hs-source-dirs:      src
  ghc-options:         -W
  ghc-prof-options:    -fprof-auto-calls

executable polar
  main-is:             Main.hs
  build-depends:       base >=4.7, mtl >=2.2, containers >=0.5.5, OpenGL >=2.12, OpenGLRaw >2.1, GLFW-b >=1.4.7, transformers >=0.4.2, bytestring >=0.10, lens >=4.12
  hs-source-dirs:      src
  ghc-options:         -W
  ghc-prof-options:    -fprof-auto-calls

test-suite test-polar
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base >=4.7, containers >=0.5.5,
                       hspec >=2.1, polar
  hs-source-dirs:      test
  ghc-options:         -W
