name:                polar4
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              David Farrell
maintainer:          shokku.ra@gmail.com
copyright:           (c) 2014-2015 David Farrell
-- category:            
build-type:          Simple
cabal-version:       >=1.9.2

library
  exposed-modules:     Polar,
                       Polar.Asset.Shader.Types,
                       Polar.Asset.Shader.Tokenizer,
                       Polar.Asset.Shader.Parser,
                       Polar.Asset.Shader.Processor
  build-depends:       base ==4.*, mtl ==2.1.*, containers ==0.5.*, OpenGL ==2.12.*, GLFW-b ==1.4.*, transformers >=0.3, bytestring ==0.10.*
  hs-source-dirs:      src
  ghc-options:         -W
  ghc-prof-options:    -fprof-auto-calls

executable polar4
  main-is:             Main.hs
  build-depends:       base ==4.*, mtl ==2.1.*, containers ==0.5.*, OpenGL ==2.12.*, GLFW-b ==1.4.*, transformers >=0.3, bytestring ==0.10.*
  hs-source-dirs:      src
  ghc-options:         -W
  ghc-prof-options:    -fprof-auto-calls

test-suite test-polar4
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  build-depends:       base ==4.*, polar4, hspec ==2.*
  hs-source-dirs:      test
  ghc-options:         -W
